# circa-solem

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/planning/: development_plan.md  feature_roadmap.md
include/circa-solem/: axis_gizmo.hpp  body.hpp  body_registry.hpp  camera.hpp  constants.hpp  ephemeris_provider.hpp  integrator.hpp  orbit_path.hpp  orbit_trail.hpp  particle_field.hpp  ring_mesh.hpp  scale_config.hpp  shader_program.hpp  sim_clock.hpp  sim_loop.hpp  solar_system_data.hpp  sphere.hpp  starfield.hpp  sun_glow.hpp  texture.hpp
scripts/: download-ephemeris.ps1  download-ephemeris.sh  download-ring-textures.sh
shaders/: billboard.frag  billboard.vert  flat.frag  flat.vert  particle.frag  particle.vert  passthrough.frag  phong.frag  phong.vert  ring.frag  ring.vert  starfield.frag  starfield.vert  trail.frag  trail.vert
src/: axis_gizmo.cpp  body_registry.cpp  camera.cpp  ephemeris_provider.cpp  integrator.cpp  main.cpp  orbit_path.cpp  orbit_trail.cpp  particle_field.cpp  ring_mesh.cpp  shader_program.cpp  sim_clock.cpp  sim_loop.cpp  sphere.cpp  starfield.cpp  sun_glow.cpp  texture.cpp
tests/: CMakeLists.txt  test_ephemeris_provider.cpp  test_integrator.cpp  test_sim_clock.cpp
tests/validation/: phase1_orbit.md
